Improve garbage collection on the iOS and desktop targets.